# monxun-plugin-marketplace

./: README.md
.claude-plugin/: marketplace.json
plugins/: akashic-knowledge-plugin.md  flutter-firebase-deploy-plugin.md  genesis-plugin.md  heuristics-framework-plugin.md  plugin-factory-plugin.md  rlm-infinite-context-plugin.md  unity-vr-dev-plugin.md
plugins/akashic-knowledge/.claude-plugin/: plugin.json
plugins/akashic-knowledge/agents/: extractor.md  indexer.md  orchestrator.md  researcher.md  retriever.md  synthesizer.md  validator.md
plugins/akashic-knowledge/commands/: create-kb.md  discover.md  export.md  ingest.md  query.md  sync.md
plugins/akashic-knowledge/docker/: docker-compose.yml
plugins/akashic-knowledge/docs/: ARCHITECTURE.md  QUICKSTART.md  README.md
plugins/akashic-knowledge/hooks/: hooks.json
plugins/akashic-knowledge/mcp/: .mcp.json
plugins/akashic-knowledge/schemas/: heuristic.schema.json  knowledge-base.schema.json  research-doc.schema.json
plugins/akashic-knowledge/templates/: heuristic-doc.md.j2  kb-manifest.json.j2  research-report.md.j2
plugins/dev-workflow-automation/: README.md
plugins/dev-workflow-automation/.claude-plugin/: plugin.json
plugins/dev-workflow-automation/agents/: bug-fixer.md  failure-analyzer.md  feature-implementer.md
plugins/dev-workflow-automation/commands/: analyze-failure.md  auto-feature.md  auto-fix.md  workflow-status.md
plugins/dev-workflow-automation/hooks/: hooks.json
plugins/dev-workflow-automation/scripts/: create-fix-branch.sh  parse-security-scan.py  (+1 more)
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/: README.md  pyproject.toml
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/docs/: GUIDE.md
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/src/flutter_deploy/: __init__.py  cli.py
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/src/flutter_deploy/analyzers/: __init__.py  flutter_analyzer.py
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/src/flutter_deploy/generators/: __init__.py  fastlane_generator.py  github_actions_generator.py  runner_setup.py
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/src/flutter_deploy/providers/: __init__.py
plugins/flutter-firebase-deploy/scripts/flutter-deploy-cli/src/flutter_deploy/utils/: __init__.py  config_wizard.py
plugins/rlm-infinite-context/: .mcp.json
plugins/unity-vr-dev/: .mcp.json
(+295 files in other folders)
